# gti_router

./: .gitignore  pyproject.toml
config/: router.yaml.example
src/: main.py
src/camera/: command_receiver.py  ptz_control.py  rtsp_client.py
src/config/: loader.py
src/health/: monitor.py  registration.py  reporter.py  watchdog.py
src/pipeline/: buffer.py  ffmpeg_hls.py
src/upload/: queue.py  s3_client.py
src/utils/: logging.py  retry.py
